@@ -45,25 +45,31 @@ public class RDFWriterRegistry
     // Let the serializer deal with the character issues.
     // UTF-8 is universal - but UTF-8 is not the default in Java ("platform encoding" is).
 
-    static { JenaSystem.init() ; }
+    // System defaults for JSON-LD writing in init$().
+    // Also - settings in RDFFormat.
 
     private static Map<RDFFormat, WriterGraphRIOTFactory> registryGraph     = new HashMap<>() ;
     private static Map<RDFFormat, WriterDatasetRIOTFactory> registryDataset = new HashMap<>() ;
     private static Map<Lang, RDFFormat> langToFormat                        = new HashMap<>() ;
 
-    // Writing a graph
-    static WriterGraphRIOTFactory wgfactory = new WriterGraphRIOTFactory() {
-        @Override
-        public WriterGraphRIOT create(RDFFormat serialization)
-        {
-            // Built-ins
+    static { JenaSystem.init() ; }
 
+    // WriterDatasetRIOTFactory as graph writer.
+    private static WriterDatasetRIOTFactory wdsfactoryAsGraph = createWriterDatasetFactory();
+    private static WriterDatasetRIOTFactory wdsfactoryForGraph() { return wdsfactoryAsGraph; }
+
+    // Graph writers : if none, use a dataset writer
+    private static WriterGraphRIOTFactory createWriterGraphFactory() {
+        return (RDFFormat serialization) -> {
+            // Built-ins
             if ( Objects.equals(RDFFormat.TURTLE_PRETTY, serialization) )
                 return new TurtleWriter() ;
             if ( Objects.equals(RDFFormat.TURTLE_BLOCKS, serialization) )
                 return new TurtleWriterBlocks() ;
             if ( Objects.equals(RDFFormat.TURTLE_FLAT, serialization) )
                 return new TurtleWriterFlat() ;
+            if ( Objects.equals(RDFFormat.TURTLE_LONG, serialization) )
+                return new TurtleWriterLong() ;
 
             if ( Objects.equals(RDFFormat.NTRIPLES_UTF8, serialization) )
                 return new NTriplesWriter() ;
@@ -77,45 +83,60 @@ public class RDFWriterRegistry
             if ( Objects.equals(RDFFormat.RDFXML_PLAIN, serialization) )
                 return new RDFXMLPlainWriter() ;
 
-            WriterDatasetRIOT dsw = wdsfactory.create(serialization) ;
+            WriterDatasetRIOT dsw = wdsfactoryForGraph().create(serialization) ;
             if ( dsw != null )
                 return RiotLib.adapter(dsw) ;
+            return null;
+        };
+    }
+
+    // Dataset writers.
+    private static WriterDatasetRIOTFactory createWriterDatasetFactory() {
+        return (RDFFormat serialization) -> {
+            if ( Objects.equals(RDFFormat.TRIG_PRETTY, serialization) )
+                return new TriGWriter() ;
+            if ( Objects.equals(RDFFormat.TRIG_BLOCKS, serialization) )
+                return new TriGWriterBlocks() ;
+            if ( Objects.equals(RDFFormat.TRIG_FLAT, serialization) )
+                return new TriGWriterFlat() ;
+            if ( Objects.equals(RDFFormat.TRIG_LONG, serialization) )
+                return new TriGWriterLong() ;
+            if ( Objects.equals(RDFFormat.NQUADS_UTF8, serialization) )
+                return new NQuadsWriter() ;
+            if ( Objects.equals(RDFFormat.NQUADS_ASCII, serialization) )
+                return new NQuadsWriter(CharSpace.ASCII) ;
+            if ( Objects.equals(RDFFormat.RDFNULL, serialization) )
+                return NullWriter.factory.create(RDFFormat.RDFNULL) ;
             return null ;
-    }} ;
-
-    // Writing a dataset
-    static WriterDatasetRIOTFactory wdsfactory = (RDFFormat serialization) -> {
-        if ( Objects.equals(RDFFormat.TRIG_PRETTY, serialization) )
-            return new TriGWriter() ;
-        if ( Objects.equals(RDFFormat.TRIG_BLOCKS, serialization) )
-            return new TriGWriterBlocks() ;
-        if ( Objects.equals(RDFFormat.TRIG_FLAT, serialization) )
-            return new TriGWriterFlat() ;
-        if ( Objects.equals(RDFFormat.NQUADS_UTF8, serialization) )
-            return new NQuadsWriter() ;
-        if ( Objects.equals(RDFFormat.NQUADS_ASCII, serialization) )
-            return new NQuadsWriter(CharSpace.ASCII) ;
-        if ( Objects.equals(RDFFormat.RDFNULL, serialization) )
-            return NullWriter.factory.create(RDFFormat.RDFNULL) ;
-        return null ;
-    } ;
-
-    private static WriterDatasetRIOTFactory wdsJsonldfactory   = syntaxForm -> new JsonLDWriter(syntaxForm);
-    private static WriterGraphRIOTFactory wgJsonldfactory      = syntaxForm -> RiotLib.adapter(new JsonLDWriter(syntaxForm));
-
-    private static WriterGraphRIOTFactory wgProtoFactory       = syntaxForm -> new WriterGraphProtobuf(syntaxForm);
-    private static WriterDatasetRIOTFactory wdsProtoFactory    = syntaxForm -> new WriterDatasetProtobuf(syntaxForm);
-
-    private static WriterGraphRIOTFactory wgThriftFactory      = syntaxForm -> new WriterGraphThrift(syntaxForm);
-    private static WriterDatasetRIOTFactory wdsThriftFactory   = syntaxForm -> new WriterDatasetThrift(syntaxForm);
-
-    private static WriterGraphRIOTFactory wgTriXFactory        = syntaxForm -> new WriterTriX();
-    private static WriterDatasetRIOTFactory wdsTriXFactory     = syntaxForm -> new WriterTriX() ;
+        } ;
+    }
 
     public static void init() {}
     static { init$() ; }
     private static void init$()
     {
+        WriterGraphRIOTFactory wgfactory = createWriterGraphFactory();
+        WriterDatasetRIOTFactory wdsfactory = createWriterDatasetFactory();
+
+        // Safer here than as statics due to class initialization ordering effects.
+        WriterDatasetRIOTFactory wdsJsonldFactory11 = syntaxForm -> new JsonLD11Writer(syntaxForm);
+        WriterGraphRIOTFactory wgJsonldFactory11    = syntaxForm -> RiotLib.adapter(new JsonLD11Writer(syntaxForm));
+        WriterGraphRIOTFactory wgProtoFactory       = syntaxForm -> new WriterGraphProtobuf(syntaxForm);
+        WriterDatasetRIOTFactory wdsProtoFactory    = syntaxForm -> new WriterDatasetProtobuf(syntaxForm);
+        WriterGraphRIOTFactory wgThriftFactory      = syntaxForm -> new WriterGraphThrift(syntaxForm);
+        WriterDatasetRIOTFactory wdsThriftFactory   = syntaxForm -> new WriterDatasetThrift(syntaxForm);
+        WriterGraphRIOTFactory wgTriXFactory        = syntaxForm -> new WriterTriX();
+        WriterDatasetRIOTFactory wdsTriXFactory     = syntaxForm -> new WriterTriX() ;
+
+        // ==== System defaults for JSON-LD writing.
+        // ** Coordinate with RDFFormat definitions of JSONLD RDFFormats:
+        //    JSONLD_PRETTY, JSONLD_PLAIN, JSONLD, JSONLD_FLAT
+
+        WriterGraphRIOTFactory jsonldWriterGraphDefault      = wgJsonldFactory11;
+        WriterDatasetRIOTFactory jsonldWriterDatasetDefault  = wdsJsonldFactory11;
+
+        // -----------------------
+
         //  Language to format.
         register(Lang.TURTLE,      RDFFormat.TURTLE) ;
         register(Lang.N3,          RDFFormat.TURTLE) ;
@@ -123,7 +144,6 @@ public class RDFWriterRegistry
         register(Lang.RDFXML,      RDFFormat.RDFXML) ;
 
         register(Lang.JSONLD,      RDFFormat.JSONLD) ;
-        //register(Lang.JSONLD10,    RDFFormat.JSONLD) ;
         register(Lang.JSONLD11,    RDFFormat.JSONLD11) ;
         register(Lang.RDFJSON,     RDFFormat.RDFJSON) ;
 
@@ -134,35 +154,38 @@ public class RDFWriterRegistry
         register(Lang.RDFTHRIFT,   RDFFormat.RDF_THRIFT) ;
 
         register(Lang.TRIX,        RDFFormat.TRIX) ;
-        register(Lang.SHACLC,      RDFFormat.SHACLC);
 
-        // Writer factories.
+        // Writer factories - graph.
+
         register(RDFFormat.TURTLE_PRETTY,  wgfactory) ;
         register(RDFFormat.TURTLE_BLOCKS,  wgfactory) ;
         register(RDFFormat.TURTLE_FLAT,    wgfactory) ;
+        register(RDFFormat.TURTLE_LONG,    wgfactory) ;
 
         register(RDFFormat.NTRIPLES,       wgfactory) ;
         register(RDFFormat.NTRIPLES_ASCII, wgfactory) ;
 
-        //  Writer.
+        // JSON-LD 1.1
+        register(RDFFormat.JSONLD11,                    wgJsonldFactory11) ;
+        register(RDFFormat.JSONLD11_PRETTY,             wgJsonldFactory11) ;
+        register(RDFFormat.JSONLD11_PLAIN,              wgJsonldFactory11) ;
+        register(RDFFormat.JSONLD11_FLAT,               wgJsonldFactory11) ;
 
-        // JSONLD 1.1 -- currently done in SysJSONLD11.init.
-        //register(RDFFormat.JSONLD11_PLAIN, jsonld11WriterGraphFactory);
-        //register(RDFFormat.JSONLD11_PLAIN, jsonld11WriterDatasetFactory);
-        //register(RDFFormat.JSONLD11_FLAT, jsonld11WriterGraphFactory);
-        //register(RDFFormat.JSONLD11_FLAT, jsonld11WriterDatasetFactory);
+        register(RDFFormat.JSONLD11,                    wdsJsonldFactory11) ;
+        register(RDFFormat.JSONLD11_PRETTY,             wdsJsonldFactory11) ;
+        register(RDFFormat.JSONLD11_PLAIN,              wdsJsonldFactory11) ;
+        register(RDFFormat.JSONLD11_FLAT,               wdsJsonldFactory11) ;
 
-        register(RDFFormat.JSONLD,                      wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_FLAT,                 wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_PRETTY,               wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_COMPACT_PRETTY,       wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_FLATTEN_PRETTY,       wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_EXPAND_PRETTY,        wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_FRAME_PRETTY,         wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_COMPACT_FLAT,         wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_FLATTEN_FLAT,         wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_EXPAND_FLAT,          wgJsonldfactory) ;
-        register(RDFFormat.JSONLD_FRAME_FLAT,           wgJsonldfactory) ;
+        // JSON-LD System defaults.
+        register(RDFFormat.JSONLD,                      jsonldWriterGraphDefault) ;
+        register(RDFFormat.JSONLD_PRETTY,               jsonldWriterGraphDefault) ;
+        register(RDFFormat.JSONLD_PLAIN,                jsonldWriterGraphDefault) ;
+        register(RDFFormat.JSONLD_FLAT,                 jsonldWriterGraphDefault) ;
+
+        register(RDFFormat.JSONLD,                      jsonldWriterDatasetDefault) ;
+        register(RDFFormat.JSONLD_PRETTY,               jsonldWriterDatasetDefault) ;
+        register(RDFFormat.JSONLD_PLAIN,                jsonldWriterDatasetDefault) ;
+        register(RDFFormat.JSONLD_FLAT,                 jsonldWriterDatasetDefault) ;
 
         register(RDFFormat.RDFJSON,        wgfactory) ;
 
@@ -173,6 +196,7 @@ public class RDFWriterRegistry
         register(RDFFormat.TRIG_PRETTY,    wgfactory) ;
         register(RDFFormat.TRIG_BLOCKS,    wgfactory) ;
         register(RDFFormat.TRIG_FLAT,      wgfactory) ;
+        register(RDFFormat.TRIG_LONG,      wgfactory) ;
 
         register(RDFFormat.NQUADS,         wgfactory) ;
         register(RDFFormat.NQUADS_ASCII,   wgfactory) ;
@@ -185,7 +209,8 @@ public class RDFWriterRegistry
 
         register(RDFFormat.TRIX, wgTriXFactory) ;
 
-        // Datasets
+        // Writer factories - datasets.
+
         register(RDFFormat.TRIG_PRETTY,    wdsfactory) ;
         register(RDFFormat.TRIG_BLOCKS,    wdsfactory) ;
         register(RDFFormat.TRIG_FLAT,      wdsfactory) ;
@@ -193,18 +218,6 @@ public class RDFWriterRegistry
         register(RDFFormat.NQUADS,         wdsfactory) ;
         register(RDFFormat.NQUADS_ASCII,   wdsfactory) ;
         register(RDFFormat.RDFNULL,        wdsfactory) ;
-
-        register(RDFFormat.JSONLD,                      wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_FLAT,                 wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_PRETTY,               wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_COMPACT_PRETTY,       wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_FLATTEN_PRETTY,       wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_EXPAND_PRETTY,        wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_FRAME_PRETTY,         wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_COMPACT_FLAT,         wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_FLATTEN_FLAT,         wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_EXPAND_FLAT,          wdsJsonldfactory) ;
-        register(RDFFormat.JSONLD_FRAME_FLAT,           wdsJsonldfactory) ;
 
         register(RDFFormat.RDF_PROTO,           wdsProtoFactory) ;
         register(RDFFormat.RDF_PROTO_VALUES,    wdsProtoFactory) ;
@@ -266,26 +279,32 @@ public class RDFWriterRegistry
     }
 
     /** Is the RDFFormat registered for use? */
-    public static boolean contains(RDFFormat format)
-    { return langToFormat.containsKey(format.getLang()) && (registryGraph.containsKey(format) || registryDataset.containsKey(format)); }
-
+    public static boolean contains(RDFFormat format) {
+        return langToFormat.containsKey(format.getLang()) &&
+                (registryGraph.containsKey(format) || registryDataset.containsKey(format));
+    }
 
     /** All registered graph formats */
     public static Collection<RDFFormat> registeredGraphFormats() {
-        return Collections.unmodifiableSet(registryGraph.keySet()) ;
+        return Set.copyOf(registryGraph.keySet()) ;
     }
 
     /** All registered dataset formats */
     public static Collection<RDFFormat> registeredDatasetFormats() {
-        return Collections.unmodifiableSet(registryDataset.keySet()) ;
+        return Set.copyOf(registryDataset.keySet()) ;
     }
 
     /** All registered formats */
-    public static Collection<RDFFormat> registered() {
+    public static Collection<RDFFormat> registeredFormats() {
         Set<RDFFormat> x = new HashSet<>() ;
         x.addAll(registryGraph.keySet()) ;
         x.addAll(registryDataset.keySet()) ;
-        return Collections.unmodifiableSet(x) ;
+        return Set.copyOf(x) ;
+    }
+
+    /** All registered languages */
+    public static Collection<Lang> registeredLangs() {
+        return Set.copyOf(langToFormat.keySet());
     }
 
     /** Get the graph writer factory associated with the language */
